terraform-best-practices/aws/s3/terraform/enable-s3-versioning/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../s3-enable-versioning.yaml --payload ./good-payload.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-versioning
                rules:
                - rule:
                    name: check-s3-versioning-setting
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../s3-enable-versioning.yaml --payload ./bad-payload-01.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-versioning
                rules:
                - rule:
                    name: check-s3-versioning-setting
                  error: ~
                  violations:
                  - message: S3 Bucket Versioning needs to be set to 'Enabled'
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../s3-enable-versioning.yaml --payload ./bad-payload-02.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-versioning
                rules:
                - rule:
                    name: check-s3-versioning-setting
                  error: ~
                  violations:
                  - message: Use the `aws_s3_bucket_versioning` resource to enable versioning.
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
